# CRIUForJava

./: .gitignore  CMakeLists.txt  CheckpointRestore.cc  CheckpointRestore.java  Readme.md  TestRandom.java  compile.sh
cmake/: FindCRIU.cmake
